--- a/Invoice.html
+++ b/Invoice.html
@@ -72,13 +72,14 @@
             </div>
             <div class="text-right">
                 <p class="font-semibold text-base">Bill to:</p>
-                <input type="text" id="clientName" placeholder="Client Name" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right">
+                <!-- Add no-print class to input fields -->
+                <input type="text" id="clientName" placeholder="Client Name" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right no-print">
                 <p class="text-sm print-only" id="clientNamePrint"></p>
-                <input type="text" id="clientAddress" placeholder="Street Address" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right mt-1">
+                <input type="text" id="clientAddress" placeholder="Street Address" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right mt-1 no-print">
                 <p class="text-sm print-only" id="clientAddressPrint"></p>
-                <input type="text" id="clientCityStateZip" placeholder="City, State, Zip" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right mt-1">
+                <input type="text" id="clientCityStateZip" placeholder="City, State, Zip" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right mt-1 no-print">
                 <p class="text-sm print-only" id="clientCityStateZipPrint"></p>
-                <input type="tel" id="clientPhone" placeholder="Phone Number" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right mt-1">
+                <input type="tel" id="clientPhone" placeholder="Phone Number" class="border border-gray-300 rounded-md px-2 py-1 text-sm text-right mt-1 no-print">
                 <p class="text-sm print-only" id="clientPhonePrint"></p>
             </div>
         </div>
