--- a/Hairstore.html
+++ b/Hairstore.html
@@ -130,6 +130,7 @@
                 <li class="added-service">Cleaning behind all furniture.</li>
                 <li class="added-service">Sanitization of mannequin heads.</li>
                 <li class="added-service">Thorough backroom cleaning.</li>
+                <li class="added-service">Steaming of all tile and floors.</li>
             </ul>
             <p class="mt-6 font-bold text-xl text-gray-800">Flat Rate: <span class="text-pink-500">$275</span></p>
         </div>
